--- a/index.html
+++ b/index.html
@@ -126,8 +126,34 @@
 <div class="bg-modal">
     <div class="modal-content">
         <div class="close">+</div>
+        <h1>QUIZ APP!</h1>
+
+        <section>
+            <img class="screenshotmodal" src="https://i.imgur.com/MQUjZ0u.png" alt="screenshot">
+        </section>
+
+        <div>
+            <p>Technologies Used:</p>
+
+            <section>
+                <img class="modaltech" src="https://i.imgur.com/cmapils.png">
+                <img class="modaltech" src="https://i.imgur.com/GdpodoM.png">
+                <img class="modaltech" src="https://i.imgur.com/1RqBniW.png">
+                <img class="modaltech" src="https://i.imgur.com/PhI23EV.png">
+            </section>
+
+        </div>
+
+        <div>
+            <h3>Description:</h3>
+            <p>
+                The 2020 Olympics are right around the corner and with Skateboarding making its debut appearance, everyone is hoping on the bandwagon. You can't swing a dead cat without seeing someone mall grabbing their board or seeing a "Thrasher" hoodie at every street
+                corner. How are you supposed to decipher the real from the posers? Hand them this quiz and find out right then and there!
+            </p>
+        </div>
     </div>
 </div>
+
 
 
 <script src="./js/script.js"></script>
