--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main>
 
         <div class="rightArrow">
-            <img class="arrowRight" src="https://i.imgur.com/onTVmZO.png" alt="arrowRight">
+            <img class="arrowRight" src="./icons/Arrow2.png" alt="arrowRight">
         </div>
 
         <div class="headline">
