--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Raul Carreras Web Desgin</title>
     <link href="./css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Rationale&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite|Vast+Shadow&display=swap" rel="stylesheet">
 </head>
 
 
@@ -79,6 +80,8 @@
 </body>
 
 <footer class="footer">
+    <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
+
     <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="_blank">
         <button class="button1">
             <img class="linkedin" src="https://i.imgur.com/XT9izKA.png" alt="linkedin">
@@ -97,26 +100,6 @@
     </button>
     </a>
 
-    <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
-
-    <div class="technology">
-        <section class="tech1">
-            <img class="one" src="https://i.imgur.com/yMoDX2S.png" alt="html5">
-        </section>
-
-        <section class="tech2">
-            <img class="two" src="https://i.imgur.com/WjGbxSp.png" alt="css3">
-        </section>
-
-        <section class="tech3">
-            <img class="three" src="https://i.imgur.com/rjg5kWd.png" alt="javascript">
-        </section>
-
-        <section class="tech4">
-            <img class="four" src="https://i.imgur.com/4lxjopv.png" alt="jquery">
-        </section>
-    </div>
-
 </footer>
 
 <p class="copyright">COPYRIGHT 2019 &#9400;</p>
@@ -124,14 +107,24 @@
 <div class="bg-modal">
     <div class="modal-content">
         <div class="close">+</div>
-        <h1 class="modaltitle">QUIZ APP!</h1>
+        <h1 class="modaltitle">Oh, so you skate?</h1>
 
-        <section>
+        <section class="screenshotSection">
             <img class="screenshotmodal" src="https://i.imgur.com/MQUjZ0u.png" alt="screenshot">
         </section>
 
+        <div class="modalLinks">
+            <section>
+                <a class="modalLink" href="https://quiz-app-mess-around--carrerasraul.repl.co/" target="_blank">Take the quiz!</a>
+            </section>
+            <section>
+                <a class="modalLink" href="https://github.com/carrerasraul/Quiz-App">Link to Github Repo</a>
+            </section>
+        </div>
+
+
         <div>
-            <p>Technologies Used:</p>
+            <h3 class="quizTechnologies">Technologies Used:</h3>
 
             <section>
                 <img class="modaltech" src="https://i.imgur.com/cmapils.png">
@@ -143,8 +136,8 @@
         </div>
 
         <div>
-            <h3>Description:</h3>
-            <p>
+            <h3 class="description">Description:</h3>
+            <p class="quizDesciption">
                 The 2020 Olympics are right around the corner and with Skateboarding making its debut appearance, everyone is hoping on the bandwagon. You can't swing a dead cat without seeing someone mall grabbing their board or seeing a "Thrasher" hoodie at every street
                 corner. How are you supposed to decipher the real from the posers? Hand them this quiz and find out right then and there!
             </p>
@@ -153,7 +146,7 @@
 </div>
 
 
-
 <script src="./js/script.js"></script>
+<script src="jquery-3.4.1.min.js"></script>
 
 </html>
