--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Raul Carreras Web Desgin | Contact</title>
     <link href="./css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Rationale&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite|Vast+Shadow&display=swap" rel="stylesheet">
 </head>
 
 
@@ -60,43 +60,25 @@
 </body>
 
 <footer class="footer">
+    <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
+
     <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="_blank">
         <button class="button1">
-            <img class="linkedin" src="https://i.imgur.com/XT9izKA.png" alt="linkedin">
-        </button>
+                <img class="linkedin" src="https://i.imgur.com/XT9izKA.png" alt="linkedin">
+            </button>
     </a>
 
     <a class="link" href="mailto:raul.e.carreras@gmail.com?subject=Website Inquiry!" target="_blank">
         <button class="button2">
-        <img class="email" src="https://i.imgur.com/vBrCuab.png" alt="email">
-    </button>
+            <img class="email" src="https://i.imgur.com/vBrCuab.png" alt="email">
+        </button>
     </a>
 
     <a class="link" href="https://github.com/carrerasraul" target="_blank">
         <button class="button3">
-        <img class="github" src="https://i.imgur.com/xbDTuS5.png" alt="github">
-    </button>
+            <img class="github" src="https://i.imgur.com/xbDTuS5.png" alt="github">
+        </button>
     </a>
-
-    <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
-
-    <div class="technology">
-        <section class="tech1">
-            <img class="one" src="https://i.imgur.com/yMoDX2S.png" alt="html5">
-        </section>
-
-        <section class="tech2">
-            <img class="two" src="https://i.imgur.com/WjGbxSp.png" alt="css3">
-        </section>
-
-        <section class="tech3">
-            <img class="three" src="https://i.imgur.com/rjg5kWd.png" alt="javascript">
-        </section>
-
-        <section class="tech4">
-            <img class="four" src="https://i.imgur.com/4lxjopv.png" alt="jquery">
-        </section>
-    </div>
 
 </footer>
 
