--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <a class="modalLink" href="https://quiz-app-mess-around--carrerasraul.repl.co/" target="_blank">Take the quiz!</a>
             </section>
             <section>
-                <a class="modalLink" href="https://github.com/carrerasraul/Quiz-App">Link to Github Repo</a>
+                <a class="modalLink" href="https://github.com/carrerasraul/Quiz-App" target="_blank">Link to Github Repo</a>
             </section>
         </div>
 
@@ -146,7 +146,8 @@
 </div>
 
 
-<script src="./js/script.js"></script>
 <script src="jquery-3.4.1.min.js"></script>
+<script src="./js/script.js"></script>
+
 
 </html>
