--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 </div>
 
 
-<script src="jquery-3.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="./js/script.js"></script>
 
 
