--- a/contact.html
+++ b/contact.html
@@ -34,8 +34,7 @@
         <nav class="navbar">
             <ul class="menu">
                 <!--        <li class="navButtons"><a>Projects</a></li>  -->
-                <li class="navButtons"><a href="#about" id="aboutbtn">About</a></li>
-                <li class="navButtons"><a>Contact</a></li>
+                <li class="navButtons"><a href="index.html">Home</a></li>
             </ul>
         </nav>
     </header>
@@ -44,13 +43,13 @@
         <div>
             <div class="contact" id="contactdiv">Contact</div>
             <ul class="contactInfo">
-                <a href="mailto:raul.e.carreras@gmail.com?subject=Website Inquiry!">
+                <a href="mailto:raul.e.carreras@gmail.com?subject=Website Inquiry!" target="_blank">
                     <li class="contactlist">email</li>
                 </a>
-                <a href="https://www.linkedin.com/in/raul-carreras-048011aa/">
+                <a href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="_blank">
                     <li class="contactlist">Linkedin</li>
                 </a>
-                <a href="https://github.com/carrerasraul">
+                <a href="https://github.com/carrerasraul" target="_blank">
                     <li class="contactlist">github</li>
                 </a>
             </ul>
@@ -83,37 +82,6 @@
 </footer>
 
 <p class="copyright">COPYRIGHT 2019 &#9400;</p>
-
-<div class="bg-modal">
-    <div class="modal-content">
-        <div class="close">+</div>
-        <h1 class="modaltitle">QUIZ APP!</h1>
-
-        <section>
-            <img class="screenshotmodal" src="https://i.imgur.com/MQUjZ0u.png" alt="screenshot">
-        </section>
-
-        <div>
-            <p>Technologies Used:</p>
-
-            <section>
-                <img class="modaltech" src="https://i.imgur.com/cmapils.png">
-                <img class="modaltech" src="https://i.imgur.com/GdpodoM.png">
-                <img class="modaltech" src="https://i.imgur.com/1RqBniW.png">
-                <img class="modaltech" src="https://i.imgur.com/PhI23EV.png">
-            </section>
-
-        </div>
-
-        <div>
-            <h3>Description:</h3>
-            <p>
-                The 2020 Olympics are right around the corner and with Skateboarding making its debut appearance, everyone is hoping on the bandwagon. You can't swing a dead cat without seeing someone mall grabbing their board or seeing a "Thrasher" hoodie at every street
-                corner. How are you supposed to decipher the real from the posers? Hand them this quiz and find out right then and there!
-            </p>
-        </div>
-    </div>
-</div>
 
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
