--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
         </div>
 
 
-        <section class="project">
-            <p class="projects">Projects</p>
-        </section>
+        <h2 class="projects">Projects</h2>
 
         <div class="projectDiv">
             <h1 class="modaltitle">Oh, so you skate?</h1>
@@ -81,10 +79,10 @@
                 <h3 class="quizTechnologies">Technologies Used:</h3>
 
                 <section>
-                    <img class="modaltech" src="https://i.imgur.com/cmapils.png">
-                    <img class="modaltech" src="https://i.imgur.com/GdpodoM.png">
-                    <img class="modaltech" src="https://i.imgur.com/1RqBniW.png">
-                    <img class="modaltech" src="https://i.imgur.com/PhI23EV.png">
+                    <img class="modaltech" alt="emailLogo" src="https://i.imgur.com/cmapils.png">
+                    <img class="modaltech" alt="cssLogo" src="https://i.imgur.com/GdpodoM.png">
+                    <img class="modaltech" alt="jsLogo" src="https://i.imgur.com/1RqBniW.png">
+                    <img class="modaltech" alt="htmlLogo" src="https://i.imgur.com/PhI23EV.png">
                 </section>
 
             </div>
@@ -110,7 +108,7 @@
     </main>
 </body>
 
-<footer class="footer">
+<footer class="footer1">
     <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
 
     <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="_blank">
@@ -134,6 +132,8 @@
 </footer>
 
 <p class="copyright">COPYRIGHT 2019 &#9400;</p>
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 
 </html>
