--- a/contact.html
+++ b/contact.html
@@ -83,4 +83,7 @@
 
 <p class="copyright">COPYRIGHT 2019 &#9400;</p>
 
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
 </html>
