--- a/index.html
+++ b/index.html
@@ -61,29 +61,29 @@
         <div class="projectDiv">
             <h1 class="modaltitle">Oh, so you skate?</h1>
 
-            <section class="screenshotSection">
+            <div class="screenshotSection">
                 <img class="screenshotmodal" src="https://i.imgur.com/MQUjZ0u.png" alt="screenshot">
-            </section>
+            </div>
 
             <div class="modalLinks">
-                <section>
+                <div>
                     <a class="modalLink" href="https://quiz-app-mess-around--carrerasraul.repl.co/" target="_blank">Take the quiz!</a>
-                </section>
-                <section>
+                </div>
+                <div>
                     <a class="modalLink" href="https://github.com/carrerasraul/Quiz-App" target="_blank">Link to Github Repo</a>
-                </section>
+                </div>
             </div>
 
 
             <div>
                 <h3 class="quizTechnologies">Technologies Used:</h3>
 
-                <section>
+                <div>
                     <img class="modaltech" alt="emailLogo" src="https://i.imgur.com/cmapils.png">
                     <img class="modaltech" alt="cssLogo" src="https://i.imgur.com/GdpodoM.png">
                     <img class="modaltech" alt="jsLogo" src="https://i.imgur.com/1RqBniW.png">
                     <img class="modaltech" alt="htmlLogo" src="https://i.imgur.com/PhI23EV.png">
-                </section>
+                </div>
 
             </div>
 
@@ -98,7 +98,7 @@
         </div>
 
         <div>
-            <section class="aboutMe" id="about">About Me</section>
+            <div class="aboutMe" id="about">About Me</div>
             <p class="bio">Born and raised in the DM <span class="virginia">[V]</span>, Raul is a recent graduate from the Thinkful Engineering Flex program. Being the problem solver he's always been, he will combine his extensive real world experience with his new
                 found passion for web design to bring you and your business a fully functional and visually pleasing platform. When Raul isn't busy making the internet a better looking place, you can find him traversing hiking trails with his dog Bogart
                 or exploring the area with his skateboard. As an avid dog lover, he also spends his down time caring for dogs.
