--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
     </main>
 </body>
 
-<footer class="footer">
+<footer class="bottom">
     <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
 
     <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="_blank">
