--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
             <div class="modalLinks">
                 <div>
-                    <a class="modalLink" href="https://quiz-app-mess-around--carrerasraul.repl.co/" target="_blank">Take the quiz!</a>
+                    <a class="modalLink" href="https://quiz-app-mess-around--carrerasraul.repl.co/" target="blank">Take the quiz!</a>
                 </div>
                 <div>
-                    <a class="modalLink" href="https://github.com/carrerasraul/Quiz-App" target="_blank">Link to Github Repo</a>
+                    <a class="modalLink" href="https://github.com/carrerasraul/Quiz-App" target="blank">Link to Github Repo</a>
                 </div>
             </div>
 
@@ -111,19 +111,19 @@
 <footer class="bottom">
     <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
 
-    <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="_blank">
+    <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank">
         <button class="button1">
             <img class="linkedin" src="https://i.imgur.com/XT9izKA.png" alt="linkedin">
         </button>
     </a>
 
-    <a class="link" href="mailto:raul.e.carreras@gmail.com?subject=Website Inquiry!" target="_blank">
+    <a class="link" href="mailto:raul.e.carreras@gmail.com?subject=Website Inquiry!" target="blank">
         <button class="button2">
         <img class="email" src="https://i.imgur.com/vBrCuab.png" alt="email">
     </button>
     </a>
 
-    <a class="link" href="https://github.com/carrerasraul" target="_blank">
+    <a class="link" href="https://github.com/carrerasraul" target="blank">
         <button class="button3">
         <img class="github" src="https://i.imgur.com/xbDTuS5.png" alt="github">
     </button>
