--- a/contact.html
+++ b/contact.html
@@ -43,13 +43,13 @@
         <div>
             <div class="contact" id="contactdiv">Contact</div>
             <ul class="contactInfo">
-                <a href="mailto:raul.e.carreras@gmail.com?subject=Website Inquiry!" target="_blank">
+                <a href="mailto:raul.e.carreras@gmail.com?subject=Website Inquiry!" target="blank">
                     <li class="contactlist">email</li>
                 </a>
-                <a href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="_blank">
+                <a href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank">
                     <li class="contactlist">Linkedin</li>
                 </a>
-                <a href="https://github.com/carrerasraul" target="_blank">
+                <a href="https://github.com/carrerasraul" target="blank">
                     <li class="contactlist">github</li>
                 </a>
             </ul>
@@ -61,13 +61,13 @@
 <footer class="bottom">
     <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
 
-    <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="_blank">
+    <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank">
         <button class="button1">
                 <img class="linkedin" src="https://i.imgur.com/XT9izKA.png" alt="linkedin">
             </button>
     </a>
 
-    <a class="link" href="mailto:raul.e.carreras@gmail.com?subject=Website Inquiry!" target="_blank">
+    <a class="link" href="mailto:raul.e.carreras@gmail.com?subject=Website Inquiry!" target="blank">
         <button class="button2">
             <img class="email" src="https://i.imgur.com/vBrCuab.png" alt="email">
         </button>
