--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </button>
     </a>
 
-    <a class="link" href="mailto:raul.e.carreras@gmail.com?subject=Website Inquiry!" target="blank">
+    <a class="link" href="mailto:raul.e.carreras@gmail.com?subject=Website_Inquiry!" target="blank">
         <button class="button2">
         <img class="email" src="https://i.imgur.com/vBrCuab.png" alt="email">
     </button>
