--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Raul Carreras Web Desgin</title>
     <link href="./css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Special+Elite|Vast+Shadow&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite%7Vast+Shadow&display=swap" rel="stylesheet">
 </head>
 
 
