--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
         <div>
             <div class="contact" id="contactdiv">Contact</div>
             <ul class="contactInfo">
-                <a href="mailto:raul.e.carreras@gmail.com?subject=Website Inquiry!" target="blank">
+                <a href="mailto:raul.e.carreras@gmail.com?subject=Website%20Inquiry!" target="blank">
                     <li class="contactlist">email</li>
                 </a>
                 <a href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank">
