--- a/index.html
+++ b/index.html
@@ -111,23 +111,23 @@
 <footer class="bottom">
     <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
 
-    <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank">
-        <button class="button1">
+        <button class="link">
+            <a class="button1" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank">
             <img class="linkedin" src="https://i.imgur.com/XT9izKA.png" alt="linkedin">
+            </a>
         </button>
-    </a>
 
-    <a class="link" href="mailto:raul.e.carreras@gmail.com?subject=Website%20Inquiry!" target="blank">
-        <button class="button2">
+        <button class="link">
+            <a class="button2" href="mailto:raul.e.carreras@gmail.com?subject=Website%20Inquiry!" target="blank">
         <img class="email" src="https://i.imgur.com/vBrCuab.png" alt="email">
-    </button>
-    </a>
+            </a>
+        </button>
 
-    <a class="link" href="https://github.com/carrerasraul" target="blank">
-        <button class="button3">
+        <button class="link">
+            <a class="button3" href="https://github.com/carrerasraul" target="blank">
         <img class="github" src="https://i.imgur.com/xbDTuS5.png" alt="github">
-    </button>
-    </a>
+            </a>
+        </button>
 
 </footer>
 
