--- a/index.html
+++ b/index.html
@@ -111,23 +111,23 @@
 <footer class="bottom">
     <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
 
-        <button class="link">
-            <a class="button1" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank">
+        <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank">
+            <button class="button1">
             <img class="linkedin" src="https://i.imgur.com/XT9izKA.png" alt="linkedin">
-            </a>
         </button>
+        </a>
 
-        <button class="link">
-            <a class="button2" href="mailto:raul.e.carreras@gmail.com?subject=Website%20Inquiry!" target="blank">
+        <a class="link" href="mailto:raul.e.carreras@gmail.com?subject=Website%20Inquiry!" target="blank">
+            <button class="button2">
         <img class="email" src="https://i.imgur.com/vBrCuab.png" alt="email">
-            </a>
-        </button>
+    </button>
+        </a>
 
-        <button class="link">
-            <a class="button3" href="https://github.com/carrerasraul" target="blank">
+        <a class="link" href="https://github.com/carrerasraul" target="blank">
+            <button class="button3">
         <img class="github" src="https://i.imgur.com/xbDTuS5.png" alt="github">
-            </a>
-        </button>
+    </button>
+        </a>
 
 </footer>
 
