--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Raul Carreras Web Desgin</title>
     <link href="./css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Special+Elite%7CVast+Shadow&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite|Vast+Shadow&display=swap" rel="stylesheet">
 </head>
 
 
@@ -107,9 +107,8 @@
 
     </main>
 
-
-<footer class="bottom">
-    <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
+    <footer class="bottom">
+        <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
 
         <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank">
             <button class="button1">
@@ -129,11 +128,13 @@
     </button>
         </a>
 
-</footer>
+    </footer>
 
-<p class="copyright">COPYRIGHT 2019 &#9400;</p>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-   
+    <p class="copyright">COPYRIGHT 2019 &#9400;</p>
+
 </body>
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
 
 </html>
