--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>Raul Carreras Web Desgin</title>
     <link href="./css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Special+Elite|Vast+Shadow&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite%7CVast+Shadow&display=swap" rel="stylesheet">
 </head>
 
 
@@ -131,10 +131,7 @@
     </footer>
 
     <p class="copyright">COPYRIGHT 2019 &#9400;</p>
-
-</body>
-
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
+</body>
 
 </html>
