--- a/index.html
+++ b/index.html
@@ -110,22 +110,17 @@
     <footer class="bottom">
         <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
 
-        <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank">
-            <button class="button1">
+        <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/">
             <img class="linkedin" src="https://i.imgur.com/XT9izKA.png" alt="linkedin">
-        </button>
         </a>
 
+
         <a class="link" href="mailto:raul.e.carreras@gmail.com?subject=Website%20Inquiry!" target="blank">
-            <button class="button2">
-        <img class="email" src="https://i.imgur.com/vBrCuab.png" alt="email">
-    </button>
+            <img class="email" src="https://i.imgur.com/vBrCuab.png" alt="email">
         </a>
 
         <a class="link" href="https://github.com/carrerasraul" target="blank">
-            <button class="button3">
-        <img class="github" src="https://i.imgur.com/xbDTuS5.png" alt="github">
-    </button>
+            <img class="github" src="https://i.imgur.com/xbDTuS5.png" alt="github">
         </a>
 
     </footer>
