--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Raul Carreras Web Desgin | Contact</title>
     <link href="./css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Special+Elite%7CVast+Shadow&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Special+Elite|Vast+Shadow&display=swap" rel="stylesheet">
 </head>
 
 
@@ -43,48 +43,43 @@
         <div>
             <div class="contact" id="contactdiv">Contact</div>
             <ul class="contactInfo">
-                <a href="mailto:raul.e.carreras@gmail.com?subject=Website%20Inquiry!" target="blank">
-                    <li class="contactlist">email</li>
-                </a>
-                <a href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank">
-                    <li class="contactlist">Linkedin</li>
-                </a>
-                <a href="https://github.com/carrerasraul" target="blank">
-                    <li class="contactlist">github</li>
-                </a>
+                <li>
+                    <a href="mailto:raul.e.carreras@gmail.com?subject=Website Inquiry!" target="blank" class="contactlist">email</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank" class="contactlist">Linkedin</a>
+                </li>
+                <li>
+                    <a href="https://github.com/carrerasraul" target="blank" class="contactlist">github</a>
+                </li>
             </ul>
         </div>
 
     </main>
 
 
-<footer class="bottom">
-    <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
+    <footer class="footer">
+        <p class="copyright2">COPYRIGHT 2019 &#9400;</p>
 
-    <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank">
-        <button class="button1">
-                <img class="linkedin" src="https://i.imgur.com/XT9izKA.png" alt="linkedin">
-            </button>
-    </a>
+        <a class="link" href="https://www.linkedin.com/in/raul-carreras-048011aa/">
+            <img class="linkedin" src="https://i.imgur.com/XT9izKA.png" alt="linkedin">
+        </a>
 
-    <a class="link" href="mailto:raul.e.carreras@gmail.com?subject=Website%20Inquiry!" target="blank">
-        <button class="button2">
+
+        <a class="link" href="mailto:raul.e.carreras@gmail.com?subject=Website%20Inquiry!" target="blank">
             <img class="email" src="https://i.imgur.com/vBrCuab.png" alt="email">
-        </button>
-    </a>
+        </a>
 
-    <a class="link" href="https://github.com/carrerasraul" target="_blank">
-        <button class="button3">
+        <a class="link" href="https://github.com/carrerasraul" target="blank">
             <img class="github" src="https://i.imgur.com/xbDTuS5.png" alt="github">
-        </button>
-    </a>
+        </a>
 
-</footer>
-    
-<p class="copyright">COPYRIGHT 2019 &#9400;</p>    
-<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    </footer>
+    <p class="copyright">COPYRIGHT 2019 &#9400;</p>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 </body>
+
 
 
 </html>
