--- a/contact.html
+++ b/contact.html
@@ -44,13 +44,13 @@
             <div class="contact" id="contactdiv">Contact</div>
             <ul class="contactInfo">
                 <li>
-                    <a href="mailto:raul.e.carreras@gmail.com?subject=Website Inquiry!" target="blank" class="contactlist">email</a>
+                    <a href="mailto:raul.e.carreras@gmail.com?subject=Website%20Inquiry!" target="blank" class="contactlist">Email</a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/raul-carreras-048011aa/" target="blank" class="contactlist">Linkedin</a>
                 </li>
                 <li>
-                    <a href="https://github.com/carrerasraul" target="blank" class="contactlist">github</a>
+                    <a href="https://github.com/carrerasraul" target="blank" class="contactlist">Github</a>
                 </li>
             </ul>
         </div>
