--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,9 @@
     <title>Raul Carreras Web Desgin | Contact</title>
     <link href="./css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Special+Elite%7CVast+Shadow&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./icons/favicon.ico" type="image/x-icon">
+
 </head>
 
 
