--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link href="./css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Special+Elite%7CVast+Shadow&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="https://i.imgur.com/onTVmZO.png" type="image/x-icon">
+    <link rel="shortcut icon" href="https://i.imgur.com/oZq2dfo.png" type="image/x-icon">
     <link rel="icon" href="https://i.imgur.com/onTVmZO.png" type="image/x-icon">
 
 </head>
