--- a/index.html
+++ b/index.html
@@ -21,11 +21,9 @@
     <link href="./css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Vast+Shadow&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Special+Elite%7CVast+Shadow&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="https://i.imgur.com/oZq2dfo.png" type="image/x-icon">
-    <link rel="icon" href="https://i.imgur.com/onTVmZO.png" type="image/x-icon">
-
+    <link rel="shortcut icon" href="./icons/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./icons/favicon.ico" type="image/x-icon">
 </head>
-
 
 <body>
     <header class="header">
@@ -102,9 +100,9 @@
 
         <div>
             <div class="aboutMe" id="about">About Me</div>
-            <p class="bio">Born and raised in the DM <span class="virginia">[V]</span>, Raul is a recent graduate from the Thinkful Engineering Flex program. Being the problem solver he's always been, he will combine his extensive real world experience with his new
-                found passion for web design to bring you and your business a fully functional and visually pleasing platform. When Raul isn't busy making the internet a better looking place, you can find him traversing hiking trails with his dog Bogart
-                or exploring the area with his skateboard. As an avid dog lover, he also spends his down time caring for dogs.
+            <p class="bio">Born and raised in <span class="virginia">Virginia</span>, Raul is a recent graduate from the Thinkful Engineering Flex program. Being the problem solver he's always been, he will combine his extensive real world experience with his new found
+                passion for web design to bring you and your business a fully functional and visually pleasing platform. When Raul isn't busy making the internet a better looking place, you can find him traversing hiking trails with his dog Bogart or
+                exploring the area with his skateboard. As an avid dog lover, he also spends his down time caring for dogs.
             </p>
         </div>
 
@@ -129,9 +127,10 @@
     </footer>
 
     <p class="copyright">COPYRIGHT 2019 &#9400;</p>
-    
-</body>
 
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+</body>
 
 
 
