--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
           <span class="technology">MySQL</span>
         </div>
       </section>
-      <section class="fullWidth purpleBG" id="portfolio">
+      <section class="fullWidth redBG" id="portfolio">
         <div class="wrapper varela whiteText paddingBottom">
           <div class="paddingHeader"><h2>Recent Projects</h2></div>
           <div class="portfolio" id="portfolioDiv">
