--- a/index.html
+++ b/index.html
@@ -5,17 +5,78 @@
     <link rel="stylesheet" type="text/css" href="normalize.css" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link
+      rel="apple-touch-icon-precomposed"
+      sizes="57x57"
+      href="favicon/apple-touch-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="114x114"
+      href="favicon/apple-touch-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="72x72"
+      href="favicon/apple-touch-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="144x144"
+      href="favicon/apple-touch-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="60x60"
+      href="favicon/apple-touch-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="120x120"
+      href="favicon/apple-touch-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="76x76"
+      href="favicon/apple-touch-icon-76x76.png"
+    />
+    <link
+      rel="apple-touch-icon-precomposed"
+      sizes="152x152"
+      href="favicon/apple-touch-icon-152x152.png"
+    />
+    <link
       rel="icon"
       type="image/png"
-      href="favicon/apple-touch-icon.png"
+      href="favicon/favicon-196x196.png"
+      sizes="196x196"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="favicon/favicon-96x96.png"
+      sizes="96x96"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="favicon/favicon-32x32.png"
+      sizes="32x32"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="favicon/favicon-16x16.png"
+      sizes="16x16"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="favicon/favicon-128.png"
       sizes="128x128"
     />
     <meta name="application-name" content="&nbsp;" />
     <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta
-      name="msapplication-TileImage"
-      content="favicon/apple-touch-icon.png"
-    />
+    <meta name="msapplication-TileImage" content="favicon/mstile-144x144.png" />
     <meta
       name="msapplication-square70x70logo"
       content="favicon/mstile-70x70.png"
@@ -70,7 +131,7 @@
           </div>
         </div>
         <div class="itsMeInner">
-          <img src="img/Raul.png" id="me" alt="Raul" />
+          <img src="img/me.png" id="me" alt="Ryan Fielder - Web Developer" />
         </div>
       </div>
       <div class="experience">
@@ -91,7 +152,7 @@
           <span class="technology">MySQL</span>
         </div>
       </section>
-      <section class="fullWidth redBG" id="portfolio">
+      <section class="fullWidth purpleBG" id="portfolio">
         <div class="wrapper varela whiteText paddingBottom">
           <div class="paddingHeader"><h2>Recent Projects</h2></div>
           <div class="portfolio" id="portfolioDiv">
@@ -123,7 +184,7 @@
           <div class="paddingHeader"><h2>About Me</h2></div>
           <div class="aboutMeContainer">
             <div class="aboutMeImg">
-              <img src="img/computer man.png" alt="Computer-Man" />
+              <img src="img/me_bottom.svg" alt="Ryan Fielder - Web Developer" />
             </div>
             <div class="aboutMeText">
               <p>
