--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           </div>
         </div>
         <div class="itsMeInner">
-          <img src="img/me.png" id="me" alt="Ryan Fielder - Web Developer" />
+          <img src="img/Raul.png" id="me" alt="Raul" />
         </div>
       </div>
       <div class="experience">
@@ -152,7 +152,7 @@
           <span class="technology">MySQL</span>
         </div>
       </section>
-      <section class="fullWidth purpleBG" id="portfolio">
+      <section class="fullWidth redBG" id="portfolio">
         <div class="wrapper varela whiteText paddingBottom">
           <div class="paddingHeader"><h2>Recent Projects</h2></div>
           <div class="portfolio" id="portfolioDiv">
@@ -184,7 +184,7 @@
           <div class="paddingHeader"><h2>About Me</h2></div>
           <div class="aboutMeContainer">
             <div class="aboutMeImg">
-              <img src="img/me_bottom.svg" alt="Ryan Fielder - Web Developer" />
+              <img src="img/computer man.png" alt="Computer-Man" />
             </div>
             <div class="aboutMeText">
               <p>
