--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <li class="topNavItem"><a href="#portfolio">Portfolio</a></li>
               <li class="topNavItem"><a href="#aboutMe">About</a></li>
               <li class="topNavItem">
-                <a href="mailto:raul.e.carreras@gmail.com">Contact</a>
+                <a href="#contactsec">Contact</a>
               </li>
             </ul>
           </nav>
@@ -160,7 +160,11 @@
           <div class="paddingHeader"><h2>Recent Projects</h2></div>
           <div class="portfolio" id="portfolioDiv">
             <div class="portfolioArrow">
-              <img src="img/left.png" id="portfolioLeftArrow" />
+              <img
+                src="img/left.png"
+                id="portfolioLeftArrow"
+                alt="left-arrow"
+              />
             </div>
             <div class="portfolioInner">
               <div class="portfolioLeft">
@@ -177,7 +181,11 @@
               </div>
             </div>
             <div class="portfolioArrow">
-              <img src="img/right.png" id="portfolioRightArrow" />
+              <img
+                src="img/right.png"
+                id="portfolioRightArrow"
+                alt="right-arrow"
+              />
             </div>
           </div>
         </div>
@@ -187,7 +195,7 @@
           <div class="paddingHeader"><h2>About Me</h2></div>
           <div class="aboutMeContainer">
             <div class="aboutMeImg">
-              <img src="img/computer man.png" alt="Computer-Man" />
+              <img src="img/computerman.png" alt="Computer-Man" />
             </div>
             <div class="aboutMeText">
               <p>
@@ -214,7 +222,7 @@
             <ul>
               <li><a href="#portfolio">Portfolio</a></li>
               <li><a href="#aboutMe">About</a></li>
-              <li><a href="mailto:raul.e.carreras@gmail.com">Contact</a></li>
+              <li><a href="#contact" id="contactsec">Contact</a></li>
             </ul>
           </div>
           <div class="footerDivider">
