--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
           <span class="technology">jQuery</span>
           <span class="technology">React</span>
           <span class="technology">Node.js</span>
-          <span class="technology">Contenful</span>
+          <span class="technology">Contentful</span>
           <span class="technology">MySQL</span>
         </div>
       </section>
@@ -195,19 +195,28 @@
           <div class="paddingHeader"><h2>About Me</h2></div>
           <div class="aboutMeContainer">
             <div class="aboutMeImg">
-              <img src="img/computerman.png" alt="Computer-Man" />
+              <img src="img/computer.jpg" alt="Computer-Man" />
             </div>
             <div class="aboutMeText">
               <p>
-                Born and raised in Virginia, Raul is a recent graduate from the
-                Thinkful Engineering Flex program. Being the problem solver he's
-                always been, he will combine his extensive real world experience
-                with his new found passion for web design to bring you and your
-                business a fully functional and visually pleasing platform. When
-                Raul isn't busy making the internet a better looking place, you
-                can find him traversing hiking trails with his dog Bogart or
-                exploring the area with his skateboard. As an avid dog lover, he
-                also spends his down time caring for dogs.
+                Hello! My name is Raul and I am a web developer living in the
+                Washington DC area. Since I can remember, I've always been
+                fascinated with creating things with my hands. Whether it was
+                taking apart something and putting it back together or playing
+                with legos, it always gave me a feeling of accomplishment. I
+                decided to take it one step further and pursue web development!
+                Combined with my love for working on a team, it seemed like it
+                was the right career path for me after 8 years working in
+                Operations Management. I've always enjoyed working with people
+                to achieve a common goal. The feeling of deploying a new site
+                that you know you spent many hours on is an incredible feeling,
+                not to mention when you get to share it with people! In my
+                free time I enjoy spending time with my dog Bogart and
+                skateboarding. It goes hand in hand with my love for traveling
+                and has taken me to some amazing places. I'm a firm believer in
+                taking time to recharge myself after putting serious work in.
+                Give's me time to think about what goal I want to achieve next
+                as well as enjoying new scenery and experiences.
               </p>
             </div>
           </div>
