--- a/index.html
+++ b/index.html
@@ -217,6 +217,8 @@
                 taking time to recharge myself after putting serious work in.
                 Give's me time to think about what goal I want to achieve next
                 as well as enjoying new scenery and experiences.
+                
+                I also have a huge obessesion with dogs!
               </p>
             </div>
           </div>
