--- a/index.html
+++ b/index.html
@@ -215,10 +215,9 @@
                 skateboarding. It goes hand in hand with my love for traveling
                 and has taken me to some amazing places. I'm a firm believer in
                 taking time to recharge myself after putting serious work in.
-                Give's me time to think about what goal I want to achieve next
+                Give's me time to think about what goals I want to achieve next
                 as well as enjoying new scenery and experiences.
-                
-                I also have a huge obessesion with dogs!
+                Not mention I have huge obsession for dogs!
               </p>
             </div>
           </div>
