--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 taking time to recharge myself after putting serious work in.
                 Give's me time to think about what goals I want to achieve next
                 as well as enjoying new scenery and experiences.
-                Not mention I have huge obsession for dogs!
+                Not mention I have a huge obsession for dogs!
               </p>
             </div>
           </div>
