--- a/index.html
+++ b/index.html
@@ -155,14 +155,11 @@
     <main>
       <section class="fullWidth" id="technology">
         <div class="wrapper center padding">
-          <span class="technology">HTML</span>
-          <span class="technology">CSS</span>
+          <span class="technology">React.JS</span>
+          <span class="technology">Node.JS</span>
           <span class="technology">JavaScript</span>
-          <span class="technology">jQuery</span>
-          <span class="technology">React</span>
-          <span class="technology">Node.js</span>
-          <span class="technology">Contentful</span>
-          <span class="technology">MySQL</span>
+          <span class="technology">Express</span>
+          <span class="technology">React-Native</span>
         </div>
       </section>
       <section class="fullWidth redBG" id="portfolio">
